bindings/c/whiteout_m3.h

typedef struct whiteout_M3StandardMaterial whiteout_M3StandardMaterial;
typedef struct whiteout_M3DisplacementMaterial whiteout_M3DisplacementMaterial;
typedef struct whiteout_M3CompositeSection whiteout_M3CompositeSection;
typedef struct whiteout_M3CompositeMaterial whiteout_M3CompositeMaterial;
typedef struct whiteout_M3TerrainMaterial whiteout_M3TerrainMaterial;
typedef struct whiteout_M3VolumeMaterial whiteout_M3VolumeMaterial;
typedef struct whiteout_M3HairMaterial whiteout_M3HairMaterial;
typedef struct whiteout_M3VolumeNoiseMaterial whiteout_M3VolumeNoiseMaterial;
typedef struct whiteout_M3CreepMaterial whiteout_M3CreepMaterial;
typedef struct whiteout_M3STBMaterial whiteout_M3STBMaterial;
typedef struct whiteout_M3ReflectionMaterial whiteout_M3ReflectionMaterial;
typedef struct whiteout_M3AnimRefF32 whiteout_M3AnimRefF32;
void whiteout_m3_M3StandardMaterial_set_materialClass(whiteout_M3StandardMaterial* self, int32_t value);
/* Layer blend operation */
int32_t whiteout_m3_M3StandardMaterial_get_layerBlendMode(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_layerBlendMode(whiteout_M3StandardMaterial* self, int32_t value);
/* Emissive layer 1 blend mode */
int32_t whiteout_m3_M3StandardMaterial_get_emissiveBlendMode1(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_emissiveBlendMode1(whiteout_M3StandardMaterial* self, int32_t value);
/* Emissive layer 2 blend mode */
int32_t whiteout_m3_M3StandardMaterial_get_emissiveBlendMode2(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_emissiveBlendMode2(whiteout_M3StandardMaterial* self, int32_t value);
/* Specular computation mode */
int32_t whiteout_m3_M3StandardMaterial_get_specularMode(const whiteout_M3StandardMaterial* self);
void whiteout_m3_M3StandardMaterial_set_specularMode(whiteout_M3StandardMaterial* self, int32_t value);
/* Normal blend factors (v19+) */
size_t whiteout_m3_M3StandardMaterial_get_normalBlendFactors_count(const whiteout_M3StandardMaterial* self);
whiteout_M3AnimRefF32* whiteout_m3_M3StandardMaterial_get_normalBlendFactors_at(whiteout_M3StandardMaterial* self, size_t index);
/* ── M3DisplacementMaterial ─────────────────────────────────────────────── */

/* DIS_ — Displacement material (v0–v4, 68 bytes) */
/*  */
/* Applies vertex displacement via a normal map and animated strength. */
whiteout_M3DisplacementMaterial* whiteout_m3_M3DisplacementMaterial_new(void);
void whiteout_m3_M3DisplacementMaterial_delete(whiteout_M3DisplacementMaterial* self);
/* Material name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3DisplacementMaterial_get_name(const whiteout_M3DisplacementMaterial* self);
void whiteout_m3_M3DisplacementMaterial_set_name(whiteout_M3DisplacementMaterial* self, const char* value);
/* Unknown field */
uint32_t whiteout_m3_M3DisplacementMaterial_get_unknown(const whiteout_M3DisplacementMaterial* self);
void whiteout_m3_M3DisplacementMaterial_set_unknown(whiteout_M3DisplacementMaterial* self, uint32_t value);
/* Render priority */
uint32_t whiteout_m3_M3DisplacementMaterial_get_priority(const whiteout_M3DisplacementMaterial* self);
void whiteout_m3_M3DisplacementMaterial_set_priority(whiteout_M3DisplacementMaterial* self, uint32_t value);
/* ── M3CompositeSection ─────────────────────────────────────────────── */

/* CMS_ — Composite material section (v0, 24 bytes) */
/*  */
/* A single section within a composite material, referencing another material index with an animated blend multiplier. */
whiteout_M3CompositeSection* whiteout_m3_M3CompositeSection_new(void);
void whiteout_m3_M3CompositeSection_delete(whiteout_M3CompositeSection* self);
/* Index into MATM array */
uint32_t whiteout_m3_M3CompositeSection_get_materialIndex(const whiteout_M3CompositeSection* self);
void whiteout_m3_M3CompositeSection_set_materialIndex(whiteout_M3CompositeSection* self, uint32_t value);
/* ── M3CompositeMaterial ─────────────────────────────────────────────── */

/* CMP_ — Composite material (v0–v2, 28 bytes) */
/*  */
/* Blends multiple sub-materials via CompositeSection entries. */
whiteout_M3CompositeMaterial* whiteout_m3_M3CompositeMaterial_new(void);
void whiteout_m3_M3CompositeMaterial_delete(whiteout_M3CompositeMaterial* self);
/* Material name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3CompositeMaterial_get_name(const whiteout_M3CompositeMaterial* self);
void whiteout_m3_M3CompositeMaterial_set_name(whiteout_M3CompositeMaterial* self, const char* value);
/* Render priority */
uint32_t whiteout_m3_M3CompositeMaterial_get_priority(const whiteout_M3CompositeMaterial* self);
void whiteout_m3_M3CompositeMaterial_set_priority(whiteout_M3CompositeMaterial* self, uint32_t value);
/* Sub-material sections (CMS_) */
size_t whiteout_m3_M3CompositeMaterial_get_sections_count(const whiteout_M3CompositeMaterial* self);
whiteout_M3CompositeSection* whiteout_m3_M3CompositeMaterial_get_sections_at(whiteout_M3CompositeMaterial* self, size_t index);
/* ── M3TerrainMaterial ─────────────────────────────────────────────── */

/* TER_ — Terrain material (v0–v1, 28 bytes) */
/*  */
/* Simple terrain-specific material with a single texture layer. */
whiteout_M3TerrainMaterial* whiteout_m3_M3TerrainMaterial_new(void);
void whiteout_m3_M3TerrainMaterial_delete(whiteout_M3TerrainMaterial* self);
/* Material name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3TerrainMaterial_get_name(const whiteout_M3TerrainMaterial* self);
void whiteout_m3_M3TerrainMaterial_set_name(whiteout_M3TerrainMaterial* self, const char* value);
/* Unknown field */
uint32_t whiteout_m3_M3TerrainMaterial_get_unknown(const whiteout_M3TerrainMaterial* self);
void whiteout_m3_M3TerrainMaterial_set_unknown(whiteout_M3TerrainMaterial* self, uint32_t value);
/* ── M3VolumeMaterial ─────────────────────────────────────────────── */

/* VOL_ — Volume material (v0, 84 bytes) */
/*  */
/* Volumetric rendering material with density falloff, color map, and two noise maps for procedural volumetric effects. */
whiteout_M3VolumeMaterial* whiteout_m3_M3VolumeMaterial_new(void);
void whiteout_m3_M3VolumeMaterial_delete(whiteout_M3VolumeMaterial* self);
/* Material name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3VolumeMaterial_get_name(const whiteout_M3VolumeMaterial* self);
void whiteout_m3_M3VolumeMaterial_set_name(whiteout_M3VolumeMaterial* self, const char* value);
/* Blend mode */
uint32_t whiteout_m3_M3VolumeMaterial_get_blendMode(const whiteout_M3VolumeMaterial* self);
void whiteout_m3_M3VolumeMaterial_set_blendMode(whiteout_M3VolumeMaterial* self, uint32_t value);
/* Density falloff type */
int32_t whiteout_m3_M3VolumeMaterial_get_falloffType(const whiteout_M3VolumeMaterial* self);
void whiteout_m3_M3VolumeMaterial_set_falloffType(whiteout_M3VolumeMaterial* self, int32_t value);
/* Alpha test threshold */
uint32_t whiteout_m3_M3VolumeMaterial_get_alphaThreshold(const whiteout_M3VolumeMaterial* self);
void whiteout_m3_M3VolumeMaterial_set_alphaThreshold(whiteout_M3VolumeMaterial* self, uint32_t value);
/* ── M3HairMaterial ─────────────────────────────────────────────── */

/* HAI_ — Hair material (defunct, v0, 116 bytes) */
/*  */
/* Anisotropic hair rendering material with specular shift and AO. Always null in observed corpus data. */
whiteout_M3HairMaterial* whiteout_m3_M3HairMaterial_new(void);
void whiteout_m3_M3HairMaterial_delete(whiteout_M3HairMaterial* self);
/* Material name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3HairMaterial_get_name(const whiteout_M3HairMaterial* self);
void whiteout_m3_M3HairMaterial_set_name(whiteout_M3HairMaterial* self, const char* value);
/* Primary specular shift */
float whiteout_m3_M3HairMaterial_get_shiftPrimary(const whiteout_M3HairMaterial* self);
void whiteout_m3_M3HairMaterial_set_shiftPrimary(whiteout_M3HairMaterial* self, float value);
/* Secondary specular shift */
float whiteout_m3_M3HairMaterial_get_shiftSecondary(const whiteout_M3HairMaterial* self);
void whiteout_m3_M3HairMaterial_set_shiftSecondary(whiteout_M3HairMaterial* self, float value);
/* Primary specular exponent */
float whiteout_m3_M3HairMaterial_get_specExponent0(const whiteout_M3HairMaterial* self);
void whiteout_m3_M3HairMaterial_set_specExponent0(whiteout_M3HairMaterial* self, float value);
/* Secondary specular exponent */
float whiteout_m3_M3HairMaterial_get_specExponent1(const whiteout_M3HairMaterial* self);
void whiteout_m3_M3HairMaterial_set_specExponent1(whiteout_M3HairMaterial* self, float value);
/* ── M3VolumeNoiseMaterial ─────────────────────────────────────────────── */

/* VON_ — Volume noise material (v0, 268 bytes) */
/*  */
/* Volumetric noise-based rendering material with animated density, falloff, scroll rate, position, scale, and rotation. Used for gas/smoke/cloud effects. */
whiteout_M3VolumeNoiseMaterial* whiteout_m3_M3VolumeNoiseMaterial_new(void);
void whiteout_m3_M3VolumeNoiseMaterial_delete(whiteout_M3VolumeNoiseMaterial* self);
/* Material name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3VolumeNoiseMaterial_get_name(const whiteout_M3VolumeNoiseMaterial* self);
void whiteout_m3_M3VolumeNoiseMaterial_set_name(whiteout_M3VolumeNoiseMaterial* self, const char* value);
/* Density falloff type */
int32_t whiteout_m3_M3VolumeNoiseMaterial_get_falloffType(const whiteout_M3VolumeNoiseMaterial* self);
void whiteout_m3_M3VolumeNoiseMaterial_set_falloffType(whiteout_M3VolumeNoiseMaterial* self, int32_t value);
/* Camera position mode (inside/outside) */
int32_t whiteout_m3_M3VolumeNoiseMaterial_get_drawTransparency(const whiteout_M3VolumeNoiseMaterial* self);
void whiteout_m3_M3VolumeNoiseMaterial_set_drawTransparency(whiteout_M3VolumeNoiseMaterial* self, int32_t value);
/* Alpha test threshold */
uint32_t whiteout_m3_M3VolumeNoiseMaterial_get_alphaThreshold(const whiteout_M3VolumeNoiseMaterial* self);
void whiteout_m3_M3VolumeNoiseMaterial_set_alphaThreshold(whiteout_M3VolumeNoiseMaterial* self, uint32_t value);
/* Volume noise material flags */
int32_t whiteout_m3_M3VolumeNoiseMaterial_get_flags(const whiteout_M3VolumeNoiseMaterial* self);
void whiteout_m3_M3VolumeNoiseMaterial_set_flags(whiteout_M3VolumeNoiseMaterial* self, int32_t value);
/* ── M3CreepMaterial ─────────────────────────────────────────────── */

/* CREP — Creep material (v0–v1, 28 bytes) */
/*  */
/* Material for Zerg creep rendering with a mask map and creep-low parameter. */
whiteout_M3CreepMaterial* whiteout_m3_M3CreepMaterial_new(void);
void whiteout_m3_M3CreepMaterial_delete(whiteout_M3CreepMaterial* self);
/* Material name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3CreepMaterial_get_name(const whiteout_M3CreepMaterial* self);
void whiteout_m3_M3CreepMaterial_set_name(whiteout_M3CreepMaterial* self, const char* value);
/* Creep low parameter */
uint32_t whiteout_m3_M3CreepMaterial_get_creepLow(const whiteout_M3CreepMaterial* self);
void whiteout_m3_M3CreepMaterial_set_creepLow(whiteout_M3CreepMaterial* self, uint32_t value);
/* ── M3STBMaterial ─────────────────────────────────────────────── */

/* STBM — Splat terrain bake material (v0, 48 bytes) */
/*  */
/* Material for baked terrain splat rendering with diffuse, normal, and specular texture layers. */
whiteout_M3STBMaterial* whiteout_m3_M3STBMaterial_new(void);
void whiteout_m3_M3STBMaterial_delete(whiteout_M3STBMaterial* self);
/* Material name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3STBMaterial_get_name(const whiteout_M3STBMaterial* self);
void whiteout_m3_M3STBMaterial_set_name(whiteout_M3STBMaterial* self, const char* value);
/* ── M3ReflectionMaterial ─────────────────────────────────────────────── */

/* REF_ — Reflection material (v0–v3, 84–160 bytes) */
/*  */
/* Planar or cube-map reflection material with animated reflection/displacement strength, blur, and multiple texture layers. */
whiteout_M3ReflectionMaterial* whiteout_m3_M3ReflectionMaterial_new(void);
void whiteout_m3_M3ReflectionMaterial_delete(whiteout_M3ReflectionMaterial* self);
/* Material name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3ReflectionMaterial_get_name(const whiteout_M3ReflectionMaterial* self);