bindings/csharp/Whiteout/M3/NativeMethods.M3.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3StandardMaterial_set_materialClass(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3StandardMaterial_get_layerBlendMode(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3StandardMaterial_set_layerBlendMode(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3StandardMaterial_get_emissiveBlendMode1(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3StandardMaterial_set_emissiveBlendMode1(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3StandardMaterial_get_emissiveBlendMode2(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3StandardMaterial_set_emissiveBlendMode2(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3StandardMaterial_get_specularMode(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3StandardMaterial_set_specularMode(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m3_M3StandardMaterial_get_normalBlendFactors_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3StandardMaterial_get_normalBlendFactors_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3DisplacementMaterial_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DisplacementMaterial_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3DisplacementMaterial_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DisplacementMaterial_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3DisplacementMaterial_get_unknown(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DisplacementMaterial_set_unknown(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3DisplacementMaterial_get_priority(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DisplacementMaterial_set_priority(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3CompositeSection_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3CompositeSection_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3CompositeSection_get_materialIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3CompositeSection_set_materialIndex(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3CompositeMaterial_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3CompositeMaterial_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3CompositeMaterial_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3CompositeMaterial_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3CompositeMaterial_get_priority(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3CompositeMaterial_set_priority(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m3_M3CompositeMaterial_get_sections_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3CompositeMaterial_get_sections_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3TerrainMaterial_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3TerrainMaterial_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3TerrainMaterial_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3TerrainMaterial_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3TerrainMaterial_get_unknown(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3TerrainMaterial_set_unknown(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3VolumeMaterial_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3VolumeMaterial_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3VolumeMaterial_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3VolumeMaterial_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3VolumeMaterial_get_blendMode(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3VolumeMaterial_set_blendMode(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3VolumeMaterial_get_falloffType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3VolumeMaterial_set_falloffType(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3VolumeMaterial_get_alphaThreshold(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3VolumeMaterial_set_alphaThreshold(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3HairMaterial_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3HairMaterial_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3HairMaterial_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3HairMaterial_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3HairMaterial_get_shiftPrimary(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3HairMaterial_set_shiftPrimary(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3HairMaterial_get_shiftSecondary(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3HairMaterial_set_shiftSecondary(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3HairMaterial_get_specExponent0(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3HairMaterial_set_specExponent0(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3HairMaterial_get_specExponent1(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3HairMaterial_set_specExponent1(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3VolumeNoiseMaterial_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3VolumeNoiseMaterial_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3VolumeNoiseMaterial_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3VolumeNoiseMaterial_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3VolumeNoiseMaterial_get_falloffType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3VolumeNoiseMaterial_set_falloffType(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3VolumeNoiseMaterial_get_drawTransparency(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3VolumeNoiseMaterial_set_drawTransparency(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3VolumeNoiseMaterial_get_alphaThreshold(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3VolumeNoiseMaterial_set_alphaThreshold(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3VolumeNoiseMaterial_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3VolumeNoiseMaterial_set_flags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3CreepMaterial_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3CreepMaterial_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3CreepMaterial_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3CreepMaterial_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3CreepMaterial_get_creepLow(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3CreepMaterial_set_creepLow(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3STBMaterial_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3STBMaterial_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3STBMaterial_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3STBMaterial_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3ReflectionMaterial_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ReflectionMaterial_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3ReflectionMaterial_get_name(IntPtr self);
